Fix spacing

--- a/_src/scss/admin/_rules.scss
+++ b/_src/scss/admin/_rules.scss
@@ -15,6 +15,6 @@
         padding-left: 0;
         background-color: $white-color;
         border-radius: 5px;
-        margin-left: -5px;
+        margin-left: -3px;
     }
 }
